src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-omT-ofT-dwP0.25-dhP0.5-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen maximized: true\nopen floating: true\ndefault column width: P0.25\ndefault window height: P0.5\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 312 × 352, bounds: 1272 × 712, states: []
size: 312 × 352, bounds: 1272 × 712, states: [Activated]
