src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-omT-ofT-dwP0.25-dhU-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen maximized: true\nopen floating: true\ndefault column width: P0.25\ndefault window height: U\nborder on\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 312 × 0, bounds: 1272 × 712, states: []
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
